Add suffix tree unit tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,14 @@ setuptools = "^70.0.0"
 ipython = "^8.25.0"
 
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.2.2"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+addopts = "--verbose"
+
