Commit WIP processing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ setuptools = "^70.0.0"
 ipython = "^8.25.0"
 pandas = "^2.2.2"
 nltk = "^3.8.1"
+tei-reader = "^0.0.17"
 
 
 [tool.poetry.group.dev.dependencies]
