--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ lxml = "^5.2.2"
 intervaltree = "^3.1.0"
 black = "^24.4.2"
 testfixtures = "^8.3.0"
+rich = "^13.7.1"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.2"
 
