--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ intervaltree = "^3.1.0"
 black = "^24.4.2"
 testfixtures = "^8.3.0"
 rich = "^13.7.1"
+tqdm = "^4.67.1"
+hypothesis = "^6.130.8"
+pyinstrument = "^5.0.1"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.2"
 
